--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "next": "14.1.0",
+    "nextjs": "^0.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "sass": "^1.72.0",
+    "swc-loader": "^0.2.6"
   },
   "devDependencies": {
     "@types/node": "^20",
