--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animejs": "^3.2.2",
     "axios": "^1.6.8",
     "next": "14.1.0",
     "nextjs": "^0.0.3",
@@ -19,6 +20,7 @@
     "swc-loader": "^0.2.6"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
